# TransferLibrary

./: CMakeLists.txt  README.md  TransferLibDoxygenConfig
include/: receiver.h  receiver_session.h  run.h  sender.h  sender_session.h  service.h
include/transfer/: logger.h  receiver.h  receiver_session.h  sender.h  sender_session.h  service.h
src/: logger.cpp  run.cpp  service.cpp
test/: CMakeLists.txt  rec.cpp  sen.cpp  test.cpp
